@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-10T01:21:17Z",
-  "count_outdated" : 5214,
-  "uniques_outdated" : 2844,
-  "count" : 5258,
-  "uniques" : 2882,
+  "timestamp" : "2025-08-10T12:28:34Z",
+  "count_outdated" : 5216,
+  "uniques_outdated" : 2846,
+  "count" : 5259,
+  "uniques" : 2883,
   "clones" : [
-    {
-      "timestamp": "2025-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-07-28T00:00:00Z",
       "count": 2,
@@ -121,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
