@@ -1,12 +1,7 @@
 {
   "count": 43,
-  "uniques": 22,
+  "uniques": 21,
   "clones": [
-    {
-      "timestamp": "2025-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-28T00:00:00Z",
       "count": 2,
@@ -66,6 +61,11 @@
       "timestamp": "2025-08-09T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
